[css] correcting css errors on firefox

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -353,6 +353,7 @@ section:nth-child(5), section:nth-child(7){
   width: 26vw;
   margin-right: 2vw;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 h2{
